--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -47,10 +47,7 @@ jobs:
     name: Check Spelling
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          submodules: 'recursive'
+      - uses: Lombiq/GitHub-Actions/.github/actions/checkout@dev
 
       # This is a workaround for the spelling workflow to check submodules too in the repository.
       - name: Stub repo layout
