--- a/.github/workflows/build-dotnet.yml
+++ b/.github/workflows/build-dotnet.yml
@@ -88,7 +88,7 @@ jobs:
         - ${{ inputs.timeout-minutes }}
     timeout-minutes: ${{ matrix.timeout-minutes }}
     steps:
-    - uses: Lombiq/GitHub-Actions/.github/actions/checkout@dev
+    - uses: Lombiq/GitHub-Actions/.github/actions/checkout@issue/CARE-265
 
     - name: Set up .NET
       uses: Lombiq/GitHub-Actions/.github/actions/setup-dotnet@dev
