Adding name to the checkout step so it's nicer

--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -62,7 +62,8 @@ jobs:
         timeout-minutes: ${{ fromJSON(format('[ {0} ]', inputs.timeout-minutes)) }}
     timeout-minutes: ${{ matrix.timeout-minutes }}
     steps:
-    - uses: Lombiq/GitHub-Actions/.github/actions/checkout@issue/CARE-265
+    - name: Checkout
+      uses: Lombiq/GitHub-Actions/.github/actions/checkout@issue/CARE-265
 
     - name: Set up .NET
       uses: Lombiq/GitHub-Actions/.github/actions/setup-dotnet@dev
