--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -47,7 +47,8 @@ jobs:
     name: Check Spelling
     runs-on: ubuntu-latest
     steps:
-      - uses: Lombiq/GitHub-Actions/.github/actions/checkout@issue/CARE-265
+      - name: Checkout
+        uses: Lombiq/GitHub-Actions/.github/actions/checkout@issue/CARE-265
 
       # This is a workaround for the spelling workflow to check submodules too in the repository.
       - name: Stub repo layout
