--- a/.github/actions/build-dotnet/action.yml
+++ b/.github/actions/build-dotnet/action.yml
@@ -126,7 +126,7 @@ runs:
         '@
 
         $switches = @{
-            Solution = (Get-ChildItem ${{ inputs.solution-or-project-path }}).FullName
+            SolutionOrProject = (Get-ChildItem ${{ inputs.solution-or-project-path }}).FullName
             Verbosity = "${{ inputs.verbosity }}"
             EnableCodeAnalysis = "${{ inputs.enable-code-analysis }}"
             Version = "${{ inputs.publish-version }}"
