--- a/.github/workflows/msbuild-and-test.yml
+++ b/.github/workflows/msbuild-and-test.yml
@@ -2,6 +2,14 @@ name: Build and Test Orchard Core solution
 
 on:
   workflow_call:
+    secrets:
+      # We can't access org secrets here so they need to be passed in.
+      CHECKOUT_TOKEN:
+        required: false
+        description: >
+          The GitHub token to authenticate checkout. Pass in a GitHub personal access token if authenticated submodules
+          are used.
+        
     inputs:
       cancel-workflow-on-failure:
         description: When set to "true", will cancel the current workflow run with all jobs if this workflow fails.
@@ -41,8 +49,18 @@ jobs:
     name: Build and Test
     timeout-minutes: ${{ inputs.timeout-minutes }}
     steps:
+    - name: Set Checkout Token
+      shell: pwsh
+      env:
+        CHECKOUT_TOKEN: ${{ secrets.CHECKOUT_TOKEN }}
+      run: |
+        $checkoutToken = $Env:CHECKOUT_TOKEN ? $Env:CHECKOUT_TOKEN : "${{ github.token }}"
+        "CHECKOUT_TOKEN=$checkoutToken" >> $Env:GITHUB_ENV
+
     - name: Checkout
       uses: Lombiq/GitHub-Actions/.github/actions/checkout@issue/CARE-265
+      with:
+        token: ${{ env.CHECKOUT_TOKEN }}
 
     - name: Enable Node corepack
       uses: Lombiq/GitHub-Actions/.github/actions/enable-corepack@dev
