Surfacing dotnet test configuration parameter, since it needs to be Debug for .NET tests but can be Release for .NET Framework

--- a/.github/actions/test-dotnet/action.yml
+++ b/.github/actions/test-dotnet/action.yml
@@ -17,6 +17,10 @@ inputs:
     required: false
     description: >
       Filter expression for dotnet test. See: https://learn.microsoft.com/en-us/dotnet/core/testing/selective-unit-tests.
+  test-configuration:
+    required: false
+    description: Value passed to the --configuration parameter of dotnet test.
+    default: "Debug"
   ui-test-parallelism:
     required: false
     default: "-1"
@@ -54,7 +58,14 @@ runs:
     - name: Run Tests
       shell: pwsh
       working-directory: ${{ inputs.build-directory }}
-      run: Invoke-SolutionTests -Verbosity ${{ inputs.test-verbosity }} -Filter "${{ inputs.test-filter }}"
+      run: |
+        $switches = @{
+          Verbosity = "${{ inputs.test-verbosity }}"
+          Filter = "${{ inputs.test-filter }}"
+          Configuration = "${{ inputs.test-configuration }}"
+        }
+
+        Invoke-SolutionTests @switches
 
     # Note that uploading the failure dumps would fail under Windows if the path were too long, regardless of
     # LongPathsEnabled, see: https://github.com/actions/upload-artifact/issues/309. To get around that we merge all
