--- a/.github/actions/prefix-pr/action.yml
+++ b/.github/actions/prefix-pr/action.yml
@@ -22,4 +22,4 @@ runs:
       shell: pwsh
       run: Prefix-PR-with-issue-key $Env:GITHUB_REPOSITORY $Env:GITHUB_REF $Env:GITHUB_HEAD_REF ${{ inputs.GITHUB_TOKEN }} "${{ github.event.pull_request.title }}" "${{ github.event.pull_request.body }}" ${{ github.event.pull_request.number }}
       env:
-        JIRA_BASE_URL: ${{ env.JIRA_BASE_URL }}
+        JIRA_BASE_URL: ${{ secrets.DEFAULT_JIRA_BASE_URL }}
