--- a/.github/workflows/validate-pull-request.yml
+++ b/.github/workflows/validate-pull-request.yml
@@ -16,3 +16,4 @@ jobs:
       uses: Lombiq/GitHub-Actions/.github/actions/check-merge-conflict@issue/OSOE-425
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
