--- a/.github/workflows/validate-submodule-pull-request.yml
+++ b/.github/workflows/validate-submodule-pull-request.yml
@@ -7,6 +7,12 @@ on:
         required: false
         type: string
         default: Lombiq/Open-Source-Orchard-Core-Extensions
+    secrets:
+        JIRA_BASE_URL:
+          required: true
+          description: >
+            Configure as explained under https://github.com/marketplace/actions/jira-login#enviroment-variables.
+            Note that it must NOT end with a slash.
 
 jobs:
   build:
@@ -22,8 +28,4 @@ jobs:
       with:
         title: ${{ github.event.pull_request.title }}
       secrets:
-        JIRA_BASE_URL:
-          required: true
-          description: >
-            Configure as explained under https://github.com/marketplace/actions/jira-login#enviroment-variables.
-            Note that it must NOT end with a slash.
+        JIRA_BASE_URL: ${{ secrets.DEFAULT_JIRA_BASE_URL }}
