--- a/.github/workflows/validate-submodule-pull-request.yml
+++ b/.github/workflows/validate-submodule-pull-request.yml
@@ -2,17 +2,18 @@ name: Validate Pull Request
 
 on:
   workflow_call:
+  # We can't access org secrets here so they need to be passed in.    
+    secrets:
+      JIRA_BASE_URL:
+        required: true
+        description: >
+          Configure as explained under https://github.com/marketplace/actions/jira-login#enviroment-variables.
+          Note that it must NOT end with a slash.
     inputs:
       repo:
         required: false
         type: string
         default: Lombiq/Open-Source-Orchard-Core-Extensions
-    secrets:
-        JIRA_BASE_URL:
-          required: true
-          description: >
-            Configure as explained under https://github.com/marketplace/actions/jira-login#enviroment-variables.
-            Note that it must NOT end with a slash.
 
 jobs:
   build:
@@ -28,4 +29,4 @@ jobs:
       with:
         title: ${{ github.event.pull_request.title }}
       secrets:
-        JIRA_BASE_URL: ${{ secrets.DEFAULT_JIRA_BASE_URL }}
+        JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
