--- a/.github/workflows/validate-pull-request.yml
+++ b/.github/workflows/validate-pull-request.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
     - name: Prefix PR with issue key
       uses: Lombiq/GitHub-Actions/.github/actions/prefix-pr@issue/OSOE-425
+      env:
+        JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
