--- a/.github/actions/test-dotnet/action.yml
+++ b/.github/actions/test-dotnet/action.yml
@@ -78,10 +78,10 @@ runs:
 
     - name: Upload Temp folder
       uses: actions/upload-artifact@v3.1.1
+      if: success() || failure()
       with:
         name: ui-test-temp-folder
         path: ${{ inputs.build-directory }}/Temp/
-        if-no-files-found: ignore
 
     - name: Test Report
       # v10
