--- a/.github/workflows/validate-pull-request.yml
+++ b/.github/workflows/validate-pull-request.yml
@@ -2,6 +2,13 @@ name: Validate Pull Request
 
 on:
   workflow_call:
+    secrets:
+      # We can't access org secrets here so they need to be passed in.
+      JIRA_BASE_URL:
+        required: true
+        description: >
+          Configure as explained under https://github.com/marketplace/actions/jira-login#enviroment-variables. Note that
+          it must NOT end with a slash.
 
 jobs:
   validate-pull-request:
@@ -11,11 +18,9 @@ jobs:
       uses: Lombiq/GitHub-Actions/.github/actions/prefix-pr@issue/OSOE-425
       env:
         JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
-      with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Check for Merge Conflict in PR
       uses: Lombiq/GitHub-Actions/.github/actions/check-merge-conflict@issue/OSOE-425
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
