Change name for action6

--- a/.github/actions/prefix-pr/action.yml
+++ b/.github/actions/prefix-pr/action.yml
@@ -1,4 +1,4 @@
-name: Prefix PR with issue key
+name: Validate Jira Issue Code in Pull Request
 description: Prefixes the PR title with a Jira issue key, and also adds the key to the body if not present
 
 inputs:
