--- a/.github/workflows/validate-submodule-pull-request.yml
+++ b/.github/workflows/validate-submodule-pull-request.yml
@@ -19,7 +19,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Prefix PR with issue key
+    - name: Validate Jira Issue Code in Pull Request
       uses: Lombiq/GitHub-Actions/.github/actions/prefix-pr@issue/OSOE-425
       env:
         JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
