--- a/.github/actions/prefix-pr/action.yml
+++ b/.github/actions/prefix-pr/action.yml
@@ -20,7 +20,7 @@ runs:
           JiraBaseUrl = $Env:JIRA_BASE_URL ? $Env:JIRA_BASE_URL : "https://lombiq.atlassian.net";
           GitHubRepository = $Env:GITHUB_REPOSITORY;
           Branch = $Env:GITHUB_HEAD_REF;
-          GitHubToken = $Env:GITHUB_TOKEN }};
+          GitHubToken = $Env:GITHUB_TOKEN;
           Title = "${{ github.event.pull_request.title }}";
           Body = "${{ github.event.pull_request.body }}";
           PullRequestID = ${{ github.event.pull_request.number }};
