--- a/.github/workflows/validate-pull-request.yml
+++ b/.github/workflows/validate-pull-request.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Validate Jira Issue Code in Pull Request
+      if: github.event.pull_request != ''
       uses: Lombiq/GitHub-Actions/.github/actions/prefix-pr@issue/OSOE-425
       env:
         JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
