Making the repository parameter of verify-submodule-pull-request work

--- a/.github/workflows/verify-submodule-pull-request.yml
+++ b/.github/workflows/verify-submodule-pull-request.yml
@@ -3,10 +3,11 @@ name: Verify Submodule Pull Request
 on:
   workflow_call:
     inputs:
-      repo:
-        required: false
+      repository:
         type: string
+        required: false
         default: Lombiq/Open-Source-Orchard-Core-Extensions
+        description: The parent repository's full name in "{owner}/{repository}" format.
 
 jobs:
   build:
@@ -16,3 +17,4 @@ jobs:
       uses: Lombiq/GitHub-Actions/.github/actions/verify-submodule-pull-request@dev
       with:
         title: ${{ github.event.pull_request.title }}
+        repository: ${{ inputs.repository }}
