Revert "Making the repository parameter of verify-submodule-pull-request work"
This reverts commit c8b90bd9033351692b839236b849feb0e66268c6.

--- a/.github/workflows/verify-submodule-pull-request.yml
+++ b/.github/workflows/verify-submodule-pull-request.yml
@@ -3,11 +3,10 @@ name: Verify Submodule Pull Request
 on:
   workflow_call:
     inputs:
-      repository:
-        type: string
+      repo:
         required: false
+        type: string
         default: Lombiq/Open-Source-Orchard-Core-Extensions
-        description: The parent repository's full name in "{owner}/{repository}" format.
 
 jobs:
   build:
@@ -17,4 +16,3 @@ jobs:
       uses: Lombiq/GitHub-Actions/.github/actions/verify-submodule-pull-request@dev
       with:
         title: ${{ github.event.pull_request.title }}
-        repository: ${{ inputs.repository }}
