--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -2,6 +2,14 @@ name: Spelling
 
 on:
   workflow_call:
+    secrets:
+      # We can't access org secrets here so they need to be passed in.
+      CHECKOUT_TOKEN:
+        required: false
+        description: >
+          The GitHub token to authenticate checkout. Pass in a GitHub personal access token if authenticated submodules
+          are used.
+
     inputs:
       cancel-workflow-on-failure:
         description: When set to "true", will cancel the current workflow run with all jobs if this workflow fails.
@@ -47,13 +55,23 @@ jobs:
     name: Check Spelling
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: Lombiq/GitHub-Actions/.github/actions/checkout@issue/CARE-265
+    - name: Set Checkout Token
+      shell: pwsh
+      env:
+        CHECKOUT_TOKEN: ${{ secrets.CHECKOUT_TOKEN }}
+      run: |
+        $checkoutToken = $Env:CHECKOUT_TOKEN ? $Env:CHECKOUT_TOKEN : "${{ github.token }}"
+        "CHECKOUT_TOKEN=$checkoutToken" >> $Env:GITHUB_ENV
+
+    - name: Checkout
+      uses: Lombiq/GitHub-Actions/.github/actions/checkout@issue/CARE-265
+      with:
+        token: ${{ env.CHECKOUT_TOKEN }}
 
       # This is a workaround for the spelling workflow to check submodules too in the repository.
-      - name: Stub repo layout
-        shell: pwsh
-        run: |
+    - name: Stub repo layout
+      shell: pwsh
+      run: |
           git config --global user.email "you@example.com"
           git config --global user.name "Your Name"
           Remove-Item .\.git\ -recurse -force
@@ -61,16 +79,16 @@ jobs:
           git add .
           git commit -m 'stub commit -- includes submodules'
 
-      - name: Check Spelling
-        uses: Lombiq/GitHub-Actions/.github/actions/spelling@dev
-        with:
+    - name: Check Spelling
+      uses: Lombiq/GitHub-Actions/.github/actions/spelling@dev
+      with:
           dictionary-source-prefixes: ${{ inputs.dictionary-source-prefixes }}
           extra-dictionaries: ${{ inputs.extra-dictionaries }}
           config: ${{ inputs.config }}
           spell-check-this: ${{ inputs.spell-check-this }}
 
-      - name: Cancel Workflow on Failure
-        if: failure() && inputs.cancel-workflow-on-failure == 'true'
-        uses: Lombiq/GitHub-Actions/.github/actions/cancel-workflow@dev
-        env:
+    - name: Cancel Workflow on Failure
+      if: failure() && inputs.cancel-workflow-on-failure == 'true'
+      uses: Lombiq/GitHub-Actions/.github/actions/cancel-workflow@dev
+      env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
