--- a/.github/actions/test-dotnet/action.yml
+++ b/.github/actions/test-dotnet/action.yml
@@ -80,7 +80,7 @@ runs:
       uses: actions/upload-artifact@v3.1.1
       if: success() || failure()
       with:
-        name: ui-test-temp-folder
+        name: ui-test-temp-folder-${{ steps.setup.outputs.friendly-build-directory-name }}-${{ steps.setup.outputs.runner-suffix }}
         path: ${{ inputs.build-directory }}/Temp/
 
     - name: Test Report
