--- a/.github/actions/add-jira-issue-code-to-pull-request/action.yml
+++ b/.github/actions/add-jira-issue-code-to-pull-request/action.yml
@@ -1,4 +1,4 @@
-name: Validate Jira Issue Code in Pull Request
+name: Add Jira Issue Code to Pull Request
 description: Prefixes the PR title with a Jira issue key, and also adds the key to the body if not present.
 
 runs:
@@ -9,7 +9,7 @@ runs:
       run: |
         "${{ github.action_path }}" >> $Env:GITHUB_PATH
 
-    - name: Validate Jira Issue Code in Pull Request
+    - name: Add Jira Issue Code to Pull Request
       # If this is run for a PR opened from a fork (not from a branch in the given repo) then "Resource not accessible
       # by integration" errors can happen. Thus, not running it for forks during the pull_request event (but it can
       # run during push, for example). See https://github.com/Lombiq/GitHub-Actions/issues/72 for details.
@@ -17,12 +17,12 @@ runs:
       shell: pwsh
       run: |
         $params = @{
-          JiraBaseUrl = $Env:JIRA_BASE_URL ? $Env:JIRA_BASE_URL : "https://lombiq.atlassian.net";
-          GitHubRepository = $Env:GITHUB_REPOSITORY;
-          Branch = $Env:GITHUB_HEAD_REF;
-          GitHubToken = $Env:GITHUB_TOKEN;
-          Title = "${{ github.event.pull_request.title }}";
-          Body = "${{ github.event.pull_request.body }}";
-          PullRequestID = ${{ github.event.number }};
+          JiraBaseUrl = $Env:JIRA_BASE_URL ? $Env:JIRA_BASE_URL : "https://lombiq.atlassian.net"
+          GitHubRepository = $Env:GITHUB_REPOSITORY
+          Branch = $Env:GITHUB_HEAD_REF
+          GitHubToken = $Env:GITHUB_TOKEN
+          Title = "${{ github.event.pull_request.title }}"
+          Body = "${{ github.event.pull_request.body }}"
+          PullRequestID = ${{ github.event.number }}
         }
-        PrefixPRWithIssueKey @params
+        AddJiraIssueCodeToPullRequest @params
