--- a/.github/workflows/validate-pull-request.yml
+++ b/.github/workflows/validate-pull-request.yml
@@ -13,9 +13,9 @@ jobs:
   validate-pull-request:
     runs-on: ubuntu-latest
     steps:
-    - name: Validate Jira Issue Code in Pull Request
+    - name: Add Jira Issue Code to Pull Request
       if: github.event.pull_request != ''
-      uses: Lombiq/GitHub-Actions/.github/actions/prefix-pr@issue/OSOE-425
+      uses: Lombiq/GitHub-Actions/.github/actions/add-jira-issue-code-to-pull-request@issue/OSOE-425
       env:
         JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
