--- a/.github/actions/checkout/action.yml
+++ b/.github/actions/checkout/action.yml
@@ -1,6 +1,6 @@
 name: Checkout
 description: >
-  Runs actions/checkout. Exists nly to centralize which version of the action we use. Intentionally not documented in
+  Runs actions/checkout. Exists only to centralize which version of the action we use. Intentionally not documented in
   Actions.md since it's only meant to be for internal use.
 
 inputs:
