--- a/.github/workflows/msbuild-and-test.yml
+++ b/.github/workflows/msbuild-and-test.yml
@@ -20,8 +20,7 @@ on:
         type: string
         default: "windows-latest"
         description: >
-          The name of the type of the machine to run the workflow under, e.g. "windows-latest" or "windows-2022". Needs
-          to be Windows.
+          The machine type to run the workflow under, e.g. "windows-latest" or "windows-2022". Needs to be Windows.
       build-directory:
         required: false
         type: string
