--- a/.github/workflows/validate-pull-request.yml
+++ b/.github/workflows/validate-pull-request.yml
@@ -16,12 +16,12 @@ jobs:
     steps:
     - name: Add Jira Issue Code to Pull Request
       if: github.event.pull_request != ''
-      uses: Lombiq/GitHub-Actions/.github/actions/add-jira-issue-code-to-pull-request@issue/OSOE-425
+      uses: Lombiq/GitHub-Actions/.github/actions/add-jira-issue-code-to-pull-request@dev
       env:
         JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Check for Merge Conflict in PR
-      uses: Lombiq/GitHub-Actions/.github/actions/check-merge-conflict@issue/OSOE-425
+      uses: Lombiq/GitHub-Actions/.github/actions/check-merge-conflict@dev
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
