--- a/.github/workflows/validate-submodule-pull-request.yml
+++ b/.github/workflows/validate-submodule-pull-request.yml
@@ -10,13 +10,14 @@ on:
           Configure as explained under https://github.com/marketplace/actions/jira-login#enviroment-variables.
           Note that it must NOT end with a slash.
     inputs:
-      repo:
-        required: false
+      repository:
         type: string
+        required: false
         default: Lombiq/Open-Source-Orchard-Core-Extensions
+        description: The parent repository's full name in "{owner}/{repository}" format.
 
 jobs:
-  build:
+  validate-submodule-pull-request:
     runs-on: ubuntu-latest
     steps:
     - name: Add Jira Issue Code to Pull Request
@@ -31,3 +32,4 @@ jobs:
       uses: Lombiq/GitHub-Actions/.github/actions/verify-submodule-pull-request@dev
       with:
         title: ${{ github.event.pull_request.title }}
+        repository: ${{ inputs.repository }}
