--- a/.github/workflows/validate-this-pull-request.yml
+++ b/.github/workflows/validate-this-pull-request.yml
@@ -7,4 +7,4 @@ on:
 
 jobs:
   call-validate-workflow:
-    uses: Lombiq/GitHub-Actions/.github/workflows/validate-submodule-pull-request.yml@issue/OSOE-480
+    uses: Lombiq/GitHub-Actions/.github/workflows/validate-submodule-pull-request.yml@dev
