Make test-dotnet not fail if there weren't any tests

--- a/.github/actions/test-dotnet/action.yml
+++ b/.github/actions/test-dotnet/action.yml
@@ -56,6 +56,7 @@ runs:
         Set-XUnitMaxParallelThreads -MaxParallelThreads ${{ inputs.ui-test-parallelism }}
 
     - name: Run Tests
+      id: run-tests
       shell: pwsh
       working-directory: ${{ inputs.build-directory }}
       run: |
@@ -75,13 +76,13 @@ runs:
     # The same is true for the next step as well.
     - name: Merge FailureDumps
       shell: pwsh
-      if: success() || failure()
+      if: (success() || failure()) && steps.run-tests.outputs.test-count != 0
       run: Merge-FailureDumps -Directory "${{ inputs.build-directory }}"
 
     - name: Upload UI testing artifacts
       uses: actions/upload-artifact@v3.1.1
       # We don't need additional conditions, because of the "if-no-files-found" setting.
-      if: success() || failure()
+      if: (success() || failure()) && steps.run-tests.outputs.test-count != 0
       with:
         name: ui-test-failure-dump-${{ steps.setup.outputs.friendly-build-directory-name }}-${{ steps.setup.outputs.runner-suffix }}
         path: ${{ inputs.build-directory }}/FailureDumps/
@@ -90,7 +91,7 @@ runs:
     - name: Test Report
       # v10
       uses: phoenix-actions/test-reporting@93ce19fa5882ebe3969ebdb9ee1024b3d29e776f
-      if: success() || failure()
+      if: (success() || failure()) && steps.run-tests.outputs.test-count != 0
       with:
         name: Test Results (${{inputs.build-directory}}|${{ steps.setup.outputs.runner-suffix }}
         path: '${{inputs.build-directory}}/**/*.trx'
