--- a/.github/workflows/msbuild-and-test.yml
+++ b/.github/workflows/msbuild-and-test.yml
@@ -63,7 +63,7 @@ jobs:
         "CHECKOUT_TOKEN=$checkoutToken" >> $Env:GITHUB_ENV
 
     - name: Checkout
-      uses: Lombiq/GitHub-Actions/.github/actions/checkout@issue/CARE-265
+      uses: Lombiq/GitHub-Actions/.github/actions/checkout@dev
       with:
         token: ${{ env.CHECKOUT_TOKEN }}
 
@@ -75,14 +75,14 @@ jobs:
       uses: Lombiq/GitHub-Actions/.github/actions/setup-dotnet@dev
 
     - name: Build and Static Code Analysis
-      uses: Lombiq/GitHub-Actions/.github/actions/msbuild@issue/CARE-265
+      uses: Lombiq/GitHub-Actions/.github/actions/msbuild@dev
       with:
         directory: ${{ inputs.build-directory }}
         verbosity: ${{ inputs.build-verbosity }}
         enable-code-analysis: ${{ inputs.build-enable-code-analysis }}
 
     - name: Tests
-      uses: Lombiq/GitHub-Actions/.github/actions/test-dotnet@issue/CARE-265
+      uses: Lombiq/GitHub-Actions/.github/actions/test-dotnet@dev
       with:
         build-directory: ${{ inputs.build-directory }}
         test-verbosity: ${{ inputs.build-verbosity }}
