--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -48,7 +48,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: Lombiq/GitHub-Actions/.github/actions/checkout@issue/CARE-265
+        uses: Lombiq/GitHub-Actions/.github/actions/checkout@dev
 
       # This is a workaround for the spelling workflow to check submodules too in the repository.
       - name: Stub repo layout
