Fixing job names

--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -53,7 +53,7 @@ on:
         required: true
 
 jobs:
-  build:
+  publish-nuget:
     runs-on: ubuntu-latest
     # Timeout-minutes is in the matrix only because the config can't be set directly from the inputs, see:
     # https://github.com/actions/runner/issues/1555.
