--- a/.github/workflows/create-jira-issues-for-community-activities.yml
+++ b/.github/workflows/create-jira-issues-for-community-activities.yml
@@ -48,7 +48,7 @@ on:
           titles.
 
 jobs:
-  build:
+  create-jira-issues-for-community-activities:
     runs-on: ubuntu-latest
     steps:
     - name: Create Jira issues for community activities
