Retrieving PR details via the API instead

--- a/.github/workflows/post-checks-automation.yml
+++ b/.github/workflows/post-checks-automation.yml
@@ -9,3 +9,5 @@ jobs:
     steps:
     - name: Automatically Merge Pull Request
       uses: Lombiq/GitHub-Actions/.github/actions/auto-merge-pull-request@issue/OSOE-477
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
