--- a/.github/actions/auto-merge-pull-request/action.yml
+++ b/.github/actions/auto-merge-pull-request/action.yml
@@ -4,12 +4,33 @@ description: Merges the current pull request automatically if the "auto-merge-if
 runs:
   using: "composite"
   steps:
-    - name: Automatically Merge Pull Request
-      # If this is run for a PR opened from a fork (not from a branch in the given repo) then "Resource not accessible
-      # by integration" errors can happen. Thus, not running it for forks during the pull_request event (but it can
-      # run during push, for example). See https://github.com/Lombiq/GitHub-Actions/issues/72 for details.
-      if: github.event.pull_request.head.repo.fork == false
+    - name: Output test
       env:
         GITHUB_CONTEXT: ${{ toJSON(github) }}
       shell: bash
       run: echo "$GITHUB_CONTEXT"
+
+    - name: Setup Scripts
+      shell: pwsh
+      run: |
+        "${{ github.action_path }}" >> $Env:GITHUB_PATH
+        (Resolve-Path "${{ github.action_path }}/../../../Scripts").Path >> $Env:GITHUB_PATH
+
+    - name: Check Mergeability
+      id: check-mergeability
+      # Fork PR runs won't have permissions to add labels to or merge PRs.
+      if: github.event.pull_request.head.repo.fork == false
+      shell: pwsh
+      run: |
+        $url = "https://api.github.com/repos/${{ github.repository }}/actions/pulls${{ github.event.pull_request_number }}"
+        $headers = @{"Authorization" = "Bearer ${{ env.GITHUB_TOKEN }}"; "Accept" = "application/vnd.github+json"}
+        $response = (Invoke-WebRequest $url -Headers $headers -Method Get) | ConvertFrom-Json
+        Write-Output $response
+        Set-GitHubOutput "is-mergeable" "true"
+
+    - name: Merge Pull Request
+      if: steps.check-mergeability.outputs.is-mergeable == "true"
+      shell: pwsh
+      run: |
+        Write-Output "Worked"
+
