--- a/.github/actions/auto-merge-pull-request/action.yml
+++ b/.github/actions/auto-merge-pull-request/action.yml
@@ -22,7 +22,7 @@ runs:
       if: github.event.pull_request.head.repo.fork == false
       shell: pwsh
       run: |
-        $url = "https://api.github.com/repos/${{ github.repository }}/actions/pulls${{ github.event.pull_request_number }}"
+        $url = "https://api.github.com/repos/${{ github.repository }}/actions/pulls/${{ github.event.pull_request.number }}"
         $headers = @{"Authorization" = "Bearer ${{ env.GITHUB_TOKEN }}"; "Accept" = "application/vnd.github+json"}
         $response = (Invoke-WebRequest $url -Headers $headers -Method Get) | ConvertFrom-Json
         Write-Output $response
