--- a/.github/actions/auto-merge-pull-request/action.yml
+++ b/.github/actions/auto-merge-pull-request/action.yml
@@ -24,7 +24,7 @@ runs:
       run: |
         $url = "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}"
         $headers = @{"Authorization" = "Bearer ${{ env.GITHUB_TOKEN }}"; "Accept" = "application/vnd.github+json"}
-        $response = (Invoke-WebRequest $url -Headers $headers -Method Get) | ConvertFrom-Json
+        $response = (Invoke-WebRequest $url -Headers $headers -Method Get)
         Write-Output $response
         Set-GitHubOutput "is-mergeable" "true"
 
