--- a/.github/actions/auto-merge-pull-request/action.yml
+++ b/.github/actions/auto-merge-pull-request/action.yml
@@ -24,8 +24,15 @@ runs:
       run: |
         $url = "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}"
         $headers = @{"Authorization" = "Bearer ${{ env.GITHUB_TOKEN }}"; "Accept" = "application/vnd.github+json"}
-        $response = (Invoke-WebRequest $url -Headers $headers -Method Get)
-        Write-Output $response
+        $response = Invoke-WebRequest $url -Headers $headers -Method Get
+
+        if ($response.StatusCode != 200)
+        {
+            Write-Output "Getting the pull request details failed with HTTP $($response.StatusCode)."
+            exit 1
+        }
+
+        Write-Output $response.Content
         Set-GitHubOutput "is-mergeable" "true"
 
     - name: Merge Pull Request
