--- a/.github/actions/auto-merge-pull-request/action.yml
+++ b/.github/actions/auto-merge-pull-request/action.yml
@@ -25,19 +25,11 @@ runs:
         $url = "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}"
         $headers = @{"Authorization" = "Bearer ${{ env.GITHUB_TOKEN }}"; "Accept" = "application/vnd.github+json"}
         $response = Invoke-WebRequest $url -Headers $headers -Method Get
-
-        if ($response.StatusCode -ne 200)
-        {
-            Write-Output "Getting the pull request details failed with HTTP $($response.StatusCode)."
-            exit 1
-        }
-
-        Write-Output $response.Content
-        Set-GitHubOutput "is-mergeable" "true"
+        Test-Mergeability $response
 
     - name: Merge Pull Request
       if: steps.check-mergeability.outputs.is-mergeable == 'true'
       shell: pwsh
       run: |
-        Write-Output "Worked"
+        Write-Output "This is mergeable."
 
