--- a/.github/actions/auto-merge-pull-request/action.yml
+++ b/.github/actions/auto-merge-pull-request/action.yml
@@ -35,3 +35,11 @@ runs:
       run: |
         Write-Output "This is mergeable."
 
+    - name: Remove Label
+      if: steps.check-mergeability.outputs.is-mergeable == 'true'
+      # v1.1.1
+      uses: mondeja/remove-labels-gh-action@9c39e92024101ccb2473aeee441d4923adf58089
+      with:
+        token: ${{ env.GITHUB_TOKEN }}
+        labels: |
+          auto-merge-if-checks-succeed
