Adding support for second label

--- a/.github/actions/auto-merge-pull-request/action.yml
+++ b/.github/actions/auto-merge-pull-request/action.yml
@@ -38,4 +38,5 @@ runs:
       with:
         token: ${{ env.GITHUB_TOKEN }}
         labels: |
+          auto-merge-and-resolve-jira-issue-if-checks-succeed
           auto-merge-if-checks-succeed
