--- a/.github/actions/auto-merge-pull-request/action.yml
+++ b/.github/actions/auto-merge-pull-request/action.yml
@@ -19,7 +19,7 @@ runs:
         # We need to fetch the PR details from the API as opposed to just using the context, because a label added after
         # the start of the run wouldn't be present in it.
         $url = "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}"
-        $headers = @{"Authorization" = "Bearer ${{ env.GITHUB_TOKEN }}"; "Accept" = "application/vnd.github+json"}
+        $headers = @{"Authorization" = "Bearer $($Env:GITHUB_TOKEN)"; "Accept" = "application/vnd.github+json"}
         $response = Invoke-WebRequest $url -Headers $headers -Method Get
         Test-Mergeability $response
 
