PS Env reference

--- a/.github/actions/cancel-workflow/action.yml
+++ b/.github/actions/cancel-workflow/action.yml
@@ -19,5 +19,5 @@ runs:
       run: |
         Write-Output "::error::Canceling workflow due to one of the jobs failing."
         $url = "https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/cancel"
-        $headers = @{"Authorization" = "Bearer ${{ env.GITHUB_TOKEN }}"; "Accept" = "application/vnd.github+json"}
+        $headers = @{"Authorization" = "Bearer $($Env:GITHUB_TOKEN)"; "Accept" = "application/vnd.github+json"}
         Invoke-WebRequest $url -Headers $headers -Method Post
