--- a/.github/actions/auto-merge-pull-request/action.yml
+++ b/.github/actions/auto-merge-pull-request/action.yml
@@ -21,8 +21,7 @@ runs:
         # We need to fetch the PR details from the API as opposed to just using the context, because a label added after
         # the start of the run wouldn't be present in it.
         $url = "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}"
-        $headers = @{"Authorization" = "Bearer $($Env:GITHUB_TOKEN)"; "Accept" = "application/vnd.github+json"}
-        $response = Invoke-WebRequest $url -Headers $headers -Method Get
+        $response = Invoke-WebRequest $url -Headers (Get-GitHubApiAuthorizationHeader) -Method Get
         Test-Mergeability $response
 
     - name: Merge Pull Request
@@ -30,8 +29,7 @@ runs:
       shell: pwsh
       run: |
         $url = "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/merge"
-        $headers = @{"Authorization" = "Bearer $($Env:GITHUB_TOKEN)"; "Accept" = "application/vnd.github+json"}
-        Invoke-WebRequest $url -Headers $headers -Method Put
+        Invoke-WebRequest $url -Headers (Get-GitHubApiAuthorizationHeader) -Method Put
 
     - name: Remove Label
       if: steps.check-mergeability.outputs.is-mergeable == 'true'
