Refactoring label check into its own script

--- a/.github/actions/auto-merge-pull-request/action.yml
+++ b/.github/actions/auto-merge-pull-request/action.yml
@@ -18,21 +18,23 @@ runs:
       if: github.event.pull_request.head.repo.fork == false
       shell: pwsh
       run: |
-        # We need to fetch the PR details from the API as opposed to just using the context, because a label added after
-        # the start of the run wouldn't be present in it.
-        $url = "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}"
-        $response = Invoke-WebRequest $url -Headers (Get-GitHubApiAuthorizationHeader) -Method Get
-        Test-Mergeability $response
+        $parameters = @{
+            Repository = "${{ github.repository }}"
+            PullRequestNumber = "${{ github.event.pull_request.number }}"
+            Label1 = 'merge-if-checks-succeed'
+            Label2 = 'merge-and-resolve-jira-issue-if-checks-succeed'
+        }
+        Test-PullRequestLabels $parameters
 
     - name: Merge Pull Request
-      if: steps.check-mergeability.outputs.is-mergeable == 'true'
+      if: steps.check-mergeability.outputs.contains-label == 'true'
       shell: pwsh
       run: |
         $url = "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/merge"
         Invoke-WebRequest $url -Headers (Get-GitHubApiAuthorizationHeader) -Method Put
 
     - name: Remove Label
-      if: steps.check-mergeability.outputs.is-mergeable == 'true'
+      if: steps.check-mergeability.outputs.contains-label == 'true'
       # v1.1.1
       uses: mondeja/remove-labels-gh-action@9c39e92024101ccb2473aeee441d4923adf58089
       with:
